--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Gestión de Usuarios</h1>
+  <!-- Formulario para dar log in -->
   <form id="user-form">
     <input type="text" id="name" placeholder="Nombre" required>
     <input type="email" id="email" placeholder="Correo" required>
