Formulario de iniciar sesion

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Formulario de log in -->
   <h1>Gestión de Usuarios</h1>
-  <!-- Formulario para dar log in -->
   <form id="user-form">
     <input type="text" id="name" placeholder="Nombre" required>
     <input type="email" id="email" placeholder="Correo" required>
